<resources>
    <string name="app_name">MAD_Assignment</string>
    <string name="usernameText">Username</string>
    <string name="passwordText">Password</string>
    <string name="LoginButton">LOGIN</string>
    <string name="newUserText">Not a User? Register Here!</string>

    <string name="createAcctTitle">CREATE ACCOUNT</string>
    <string name="confirmCreationText">Create</string>
    <string name="cancelCreationText">Cancel</string>
    <string name="mainlandingPageTitle">MAIN PAGE</string>

    <string name="LimitOptionText">Limit Option</string>
    <string name="FoodCatalogueText">Food Catalogue</string>
    <string name="FeedbackText">Feedback</string>
    <string name="InfoPageText">Infomation about Food Courts!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="FoodName">Name:</string>
    <string name="FoodLocation">Location:</string>
    <string name="FoodPrice">Price:</string>
    <string name="FoodCalories">Calories:</string>
    <string name="FoodImage">Food Image</string>
    <string-array name="FoodCourts">
        <item>Food Club</item>
        <item>Makan Place</item>
        <item>Munch</item>
    </string-array>
    <string-array name="Crowdedness">
        <item>Full</item>
        <item>Almost Full</item>
        <item>Not Crowded</item>
        <item>Almost Empty</item>
        <item>Empty</item>
    </string-array>

    <!-- Checkout activity -->
    <string name="title_activity_panel_view_page">PanelViewPage</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is
        not available on this phone.
    </string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for
        %s!
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mapView">Get there using this NP map!</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>
