<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PanelPage">

    <ImageView
        android:id="@+id/SidePanelButton"
        android:layout_width="52dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    <TextView
        android:id="@+id/fcText"
        android:layout_width="258dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/FoodCatalogueText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/limitOptText" />

    <TextView
        android:id="@+id/limitOptText"
        android:layout_width="258dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:text="@string/LimitOptionText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/InfoText"
        android:layout_width="262dp"
        android:layout_height="71dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:text="@string/InfoPageText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fcText" />

    <TextView
        android:id="@+id/fbText"
        android:layout_width="260dp"
        android:layout_height="67dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:text="@string/FeedbackText"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoText" />

</androidx.constraintlayout.widget.ConstraintLayout>